--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,8 @@ structlog>=23.1.0
 
 # Environment & Config
 python-dotenv>=1.0.0
-pydantic-settings>=2.0.0 
+pydantic-settings>=2.0.0
+
+# Hugging Face Integration
+huggingface-hub>=0.19.0
+transformers>=4.35.0 
